# android_rtk

./: build.gradle  my-release-key.jks  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/configures/: ambfix.json  ppp.json  tables.json
app/src/main/assets/configures/trace/: bamboo.stat  bamboo.stat.20240122-22:00:01
app/src/main/cpp/: CMakeLists - 副本.txt  CMakeLists.txt  CMakeLists（复件）.txt  java_sdk.cpp  main.cpp  main（复件）.cpp
app/src/main/cpp/IO/: CMakeLists.txt  change_log
app/src/main/cpp/IO/include/: IO_rtcm.h
app/src/main/cpp/IO/src/: IO_rtcm.cpp
app/src/main/cpp/SDK/include/: Interface.h
app/src/main/cpp/SDK2/include/: Interface.h  rtklib.h  rtklib_fun.h
app/src/main/java/com/example/fortest/: Config.kt  GGAData.kt  GraphView.java  MainActivity.java  NtripActivity.java  NtripTask.java  SDK.java  TcpActivity.java  Utils.java
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  activity_ntrip.xml  activity_tcp.xml  setntrip.xml  settcp.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
